--- a/index.html
+++ b/index.html
@@ -7,3 +7,33 @@
     <title>NaturaInfo</title>
 </head>
 <body>
+    <div class="img-natureza">
+        <h1>EXPLORE A NATUREZA</h1>
+    </div>
+        
+    <div class="texto1">
+        <p>text1</p>
+    </div>
+
+    <div class="img-praia">
+        <h1>PRAIA</h1>
+    </div>
+
+    <div class="texto2"
+        <p>text2</p>
+    </div>
+
+    <div clas="img-montanha">
+        <h1>MONTANHAS</h1>
+    </div>
+
+    <div class="texto3"
+        <p>text3</p>
+    </div>
+
+    <div clas="img-floresta">
+        <h1>FLORESTAS</h1>
+    </div>
+        <p>text4</p>
+</body>
+</html>
