botão para ir lá pra cima

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>NaturaInfo</title>
 </head>
 <body>
+    <header id="topo-pagina"></header>
+
     <div class="imgnatureza">
         <h1>EXPLORE A NATUREZA</h1>
     </div>
@@ -42,6 +44,12 @@
         <p>Além disso, as florestas são o lar de muitas espécies de animais e plantas, algumas delas ameaçadas de extinção, e têm um papel fundamental na manutenção do equilíbrio climático global, contribuindo para a regulação do clima e para a proteção da biodiversidade.</p>
         <p>No entanto, a exploração humana das florestas também pode ter um grande impacto negativo no meio ambiente, especialmente quando é feita de maneira irresponsável. A exploração ilegal de madeira, a expansão da agricultura e a mineração são algumas das atividades que podem levar ao desmatamento, à perda de biodiversidade e ao aumento da emissão de gases do efeito estufa.</p>
     </div>
+
+    <a href="#topo-pagina" id="topo" title="Voltar ao topo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" class="bi bi-arrow-up" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"/>
+        </svg>
+    </a>
 
 </body>
 </html>
